match fonts and animations with design

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -13,8 +13,9 @@
 
 .title{
     font-size: 2rem;
-    font-weight: 600;
+    font-weight: 500;
     margin-left: 1rem;
+    font-family: "righteous";
 }
 
 .option-icon{
