--- a/src/styles/create.css
+++ b/src/styles/create.css
@@ -6,4 +6,46 @@
     justify-content: center;
     align-items: center;
     background-color: #F5E1AD;
+    gap: 1rem;
+}
+
+
+.songsTile{
+    width: 60vw;
+    height: 60vh;
+    background-color: #EBD397;
+}
+
+input{
+    font-size: 1.2rem;
+    padding-left: 2rem;
+width: 24vw;
+height: 2.5rem;
+border: none;
+}
+
+.addbtn{
+    margin-top: 0.3rem;
+    width: 3rem;
+    height: 3rem;
+    font-size: 2rem;
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: black;
+}
+
+.complimentary{
+    height: 4rem;
+    width: 10rem;
+    background-color: pink;
+}
+
+.inputs{
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
 }
