--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -18,12 +18,13 @@
     height: 100%;
     border-radius: 0rem 5rem 5rem 0rem;
     display: flex;
-    gap: 2rem;
+    gap: 1rem;
     font-size: 1.5rem;
     font-weight: 600;
     justify-content: start;
     padding-left: 1.5rem;
     align-items: center;
+    font-family: "roboto";
 }
 
 .time{
