--- a/src/styles/create.css
+++ b/src/styles/create.css
@@ -1,120 +1,138 @@
-.create-content{
-    height: 100vh;
-    max-height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #F5E1AD;
-    gap: 1rem;
-}
-
-
-.songsTile{
-    width: 60vw;
-    height: 60vh;
-    background-color: #EBD397;
-}
-
-input{
-    font-size: 1.2rem;
-    padding-left: 2rem;
-width: 24vw;
-height: 2.5rem;
-border: none;
-}
-
-.addbtn{
-    margin-top: 0.3rem;
-    width: 3rem;
-    height: 3rem;
-    font-size: 2rem;
-    font-weight: 600;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: black;
-}
-
-.complimentary{
-    height: 4rem;
-    width: 10rem;
-    background-color: pink;
-}
-
-.inputs{
-    display: flex;
-    gap: 2rem;
-    justify-content: center;
-    align-items: center;
-}
-
-.cassette {
-    margin-top: 100px;
-    display: inline-block;
-    position: relative;
-    width: 280px;
-    height: 187px;
-    margin-left: 20px;
-    transition: 0.5s;
-
-}
-
-.cassette:hover {
-transform: rotate(-10deg);
-    animation-duration: 2s;
-}
-
-
-.cassette-items {
-    position: absolute;
-    width: 100%;
-    top: 0;
-    /* left: calc(50% - 50px); */
-    align-items: center;
-    justify-content: center;
-    /* background-color: orange; */
-    /* z-index: 2; */
-}
-
-.cassette-items img {
-    margin-top: 85px;
-    height: 2.5rem;
-    object-fit: cover;
-    width: 5rem;
-}
-
-.cassette-bg {
-    
-    width: 280px;
-    position: absolute;
-    top: 0;
-    left: 0;
+.create-content {
+  height: 100vh;
+  max-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5e1ad;
+  gap: 1rem;
 }
 
 .songsTile {
-    white-space: nowrap;
-    overflow-x: auto;
+  width: 60vw;
+  height: 60vh;
+  background-color: #ebd397;
+}
+
+input {
+  font-size: 1.2rem;
+  padding-left: 2rem;
+  width: 24vw;
+  height: 2.5rem;
+  border: none;
+}
+
+.addbtn {
+  margin-top: 0.3rem;
+  width: 3rem;
+  height: 3rem;
+  font-size: 2rem;
+  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: black;
+}
+
+.complimentary {
+  height: 4rem;
+  width: 10rem;
+  background-color: pink;
+}
+
+.inputs {
+  display: flex;
+  gap: 2rem;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.cassette {
+  margin-top: 100px;
+  display: inline-block;
+  position: relative;
+  width: 280px;
+  height: 187px;
+  margin-left: 20px;
+  transition: 0.5s;
+}
+
+.cassette:hover {
+  transform: rotate(-10deg);
+  animation-duration: 2s;
+}
+
+.cassette-items {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  /* left: calc(50% - 50px); */
+  align-items: center;
+  justify-content: center;
+  /* background-color: orange; */
+  /* z-index: 2; */
+}
+
+.cassette-items img {
+  margin-top: 85px;
+  height: 2.5rem;
+  object-fit: cover;
+  width: 5rem;
+}
+
+.cassette-bg {
+  width: 280px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.songsTile {
+  white-space: nowrap;
+  overflow-x: auto;
 }
 
 .cassette-parent {
-    height: 100%;
+  height: 100%;
 }
 
 .cassette-thumb {
-    width: auto;
-    height: 50px;
-    object-fit: contain;
+  width: auto;
+  height: 50px;
+  object-fit: contain;
 }
 
 .btn {
-    background-color: #F16A43;
-    padding: 1rem 1.5rem;
-    border-radius: 0.5rem;
-    font-size: 1.5rem;
-    font-weight: 600;
-    border: none;
-    cursor: pointer;
+  background-color: #f16a43;
+  padding: 1rem 1.5rem;
+  border-radius: 0.5rem;
+  font-size: 1.5rem;
+  font-weight: 400;
+  border: none;
+  cursor: pointer;
 }
 
+@media screen and (max-width: 600px) {
+  .inputs {
+    display: flex;
+    gap: 2rem;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  input {
+    font-size: 1.1rem;
+    padding-left: 1rem;
+    width: 24vw;
+    height: 2.5rem;
+    border: none;
+  }
+  .songsTile {
+    width: 90vw;
+    height: 60vh;
+    background-color: #ebd397;
+  }
+}
