--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,30 +1,35 @@
-.header{
-    margin: 0;
-    position: fixed;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    top: 0;
-    width: 100%;
-    background-color: #F16A43;
-    color: white;
-    height: 3rem;
+.header {
+  margin: 0;
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  top: 0;
+  width: 100%;
+  background-color: #f16a43;
+  color: white;
+  height: 3rem;
 }
 
-.title{
-    font-size: 2rem;
-    font-weight: 500;
-    margin-left: 1rem;
-    font-family: "righteous";
+.title {
+  font-size: 2rem;
+  font-weight: 500;
+  margin-left: 1rem;
+  font-family: "righteous";
 }
 
-.option-icon{
-    height: 2rem;
+.option-icon {
+  height: 2rem;
 }
 
-.options{
+.options {
+  margin-right: 2rem;
+  display: flex;
+  gap: 0.5rem;
+}
 
-    margin-right: 2rem;
-    display: flex;
-    gap: 0.5rem;
+@media screen and (max-width: 600px) {
+  .options {
+    display: none;
+  }
 }
