--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -22,7 +22,7 @@
   gap: 1rem;
   font-size: 1.5rem;
   font-weight: 600;
-  justify-content: start;
+  justify-content: flex-start;
   padding-left: 1.5rem;
   align-items: center;
   font-family: "roboto";
